--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@portone/browser-sdk": "^0.0.10",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
@@ -32,6 +33,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
+    "uuid": "^11.0.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
