--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.1.7",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "lodash": "^4.17.21",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
